# balls

./: .gitignore  Cargo.toml  LICENSE  README.md  funding.json  main.py
.github/workflows/: ci.yml
balls/: parser.py
examples/: Math.balls  add_ma.balls  addmod.balls  balance_ma.balls  commutative_add.balls  commutative_gt_lt.balls  core_ops.balls  create2_factory.balls  erc20.huff  erc20_balance_of.balls  just_dup.balls  just_pop.balls  merkle.balls  merkle.huff  permit_ma.balls  pop.balls  rearrange.balls  std_evm.balls  transfer_ma.balls
scripts/: gen-std.py
src/: ast_to_comp.rs  comp_graph.rs  huff_formatter.rs  inject_std.rs  lib.rs  main.rs  swap.rs  utils.rs
src/parser/: ast.rs  error_printing.rs  lexer.rs  mod.rs  parser.rs  tokens.rs  types.rs  utils.rs
src/schedulers/: backwards.rs  machine.rs  mod.rs  step.rs  swap.rs
src/scheduling/: actions.rs  astar.rs  dijkstra.rs  ir.rs  machine.rs  mod.rs  schedulers.rs  step.rs  swap.rs
src/transformer/: analysis.rs  global_ctx.rs  ir_gen.rs  mod.rs  semantics.rs  std_evm.rs  tmacro.rs
