[package]
name = "balls"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
chumsky = "0.9.3"
num-bigint = "0.4.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "balls"
path = "src/main.rs"
doc = false

[profile.release]
debug = true
