[package]
name = "balls"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
ariadne = "0.4.0"
chumsky = "0.9.3"
clap = { version = "4.5.1", features = ["derive"] }
num-bigint = "0.4.4"


[dependencies.xxhash-rust]
version = "0.8.8"
features = ["xxh3", "const_xxh3"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "balls"
path = "src/main.rs"
doc = false

[profile.release]
debug = true
